# buildup_analysis1

./: .gitignore  pyproject.toml  서버 이용법.txt
ShowMeTheColor/: api_server.py  schemas.py
ShowMeTheColor/src/: requirements.txt
ShowMeTheColor/src/personal_color_analysis/: detect_face.py  personal_color.py  tone_analysis.py
